kubernetes/apps/development/renovate/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: renovate-operator
  annotations:
    dashboard.home/enabled: "true"
    dashboard.home/name: Renovate
    dashboard.home/description: Automated dependency updates
    dashboard.home/icon: mend-renovate
    dashboard.home/group: Development
spec:
  hostnames:
    - renovate.hemma.dev
  parentRefs:
    - name: internal
      namespace: networking
  rules:
    - backendRefs:
        - name: renovate-operator
          namespace: development
          port: 8081
